Manoj- footer alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -6847,3 +6847,6 @@ agendas-container agendas-item agendas-published {
     font-weight: 700;
     letter-spacing: .5px;
 }
+.copyright-mtop-1 {
+    margin-top: 1rem !important;
+}
